<resources>
    <string name="app_name">GastosV2</string>
    <string name="action_settings">Settings</string>
    <string name="action_registrarse">Registrarse</string>
    <string name="action_ingresar">Ingresar</string>
    <string name="title_activity_registracion">Registracion</string>
    <string name="action_atras">Atras</string>
    <string name="action_confirmar">Confirmar</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_apellido">Apellido</string>
    <string name="txt_mail">Mail</string>
    <string name="edit_nombre">Ingrese su nombre</string>
    <string name="ver_datos">Ver datos</string>
    <string name="title_activity_ingresar">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
